--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.30.0",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.515.0",
     "next": "14.0.0",
     "next-auth": "^4.24.0",
     "react": "^18",
